src/test/deca/syntax/invalid/provided/chaine_incorrecte.deca
// Description:
//    tests de programme incorrect lexicalement (car présence du caractère '\')


"\"
